[gd_scene load_steps=34 format=3 uid="uid://bpsebf7bxhg50"]

[ext_resource type="Script" path="res://Scripts/Nivel-2.gd" id="1_tm8tf"]
[ext_resource type="Texture2D" uid="uid://dogm4nmm61qq0" path="res://Assets/Imagenes/Fondos/Fondo dentro teatro.png" id="2_4j11t"]
[ext_resource type="Texture2D" uid="uid://cn4wiq6qpdefk" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/10.png" id="4_6s0ht"]
[ext_resource type="Texture2D" uid="uid://cgvx3bkbkvddl" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/11.png" id="5_g8uvi"]
[ext_resource type="Texture2D" uid="uid://cy6hysxju5p2n" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/20.png" id="8_1ra4s"]
[ext_resource type="Texture2D" uid="uid://ghot67asr1ht" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/12.png" id="8_h5qa3"]
[ext_resource type="Texture2D" uid="uid://r1y0obfcdga8" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/21.png" id="9_74pkq"]
[ext_resource type="Texture2D" uid="uid://c47jw7qfqmm56" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/22.png" id="10_6vm2p"]
[ext_resource type="Texture2D" uid="uid://bf4et46goncc5" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/13.png" id="10_u22u8"]
[ext_resource type="Texture2D" uid="uid://cpm6vq0h3rjc0" path="res://Assets/Imagenes/Imagenes-separadas/imageonline/23.png" id="11_ntv08"]
[ext_resource type="AudioStream" uid="uid://bqkjpub6pt3xq" path="res://Sonidos/pop-39222.mp3" id="11_v2ta2"]
[ext_resource type="Texture2D" uid="uid://cfqclmv0amrvj" path="res://Assets/Imagenes/bordeguitarra.png" id="12_u45ga"]
[ext_resource type="Texture2D" uid="uid://bpw2enr0e4lqa" path="res://Assets/Imagenes/palabra cuatro.png" id="13_ayilc"]
[ext_resource type="AudioStream" uid="uid://coa474eb43lv2" path="res://Sonidos/Instrucciones rompecabezas.mp3" id="14_kltit"]
[ext_resource type="AudioStream" uid="uid://8nbb5g47ckyp" path="res://Sonidos/Victoria rompecabezas cuatro.mp3" id="15_iufnw"]
[ext_resource type="Texture2D" uid="uid://bgq1o7fxxrtmw" path="res://Assets/Sprite sheets/Botones/boton flecha.png" id="16_nanhl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wdt0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5tau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mg4ca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q262x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6dd3"]

[sub_resource type="Animation" id="Animation_q25uy"]
resource_name = "ButtonAnimation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_su8ib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Guitarra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Guitarra:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button/TextureRect:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rrpb1"]
resource_name = "Words"
length = 1.5

[sub_resource type="Animation" id="Animation_3iuyn"]
resource_name = "guitarra"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Guitarra:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Guitarra:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [Vector2(0.53, 0.53), Vector2(1.275, 1.275)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4b6kv"]
_data = {
"ButtonAnimation": SubResource("Animation_q25uy"),
"RESET": SubResource("Animation_su8ib"),
"Words": SubResource("Animation_rrpb1"),
"guitarra": SubResource("Animation_3iuyn")
}

[sub_resource type="Animation" id="Animation_01v3w"]
resource_name = "Oscuridad"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n2m62"]
resource_name = "Oscuridad2"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2cmdr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1hvt"]
_data = {
"Oscuridad": SubResource("Animation_01v3w"),
"Oscuridad2": SubResource("Animation_n2m62"),
"RESET": SubResource("Animation_2cmdr")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_14yi3"]
atlas = ExtResource("16_nanhl")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldehe"]
atlas = ExtResource("16_nanhl")
region = Rect2(60, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_uub75"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_14yi3")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ldehe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tm8tf")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4j11t")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.023
anchor_top = 0.35
anchor_right = 0.039
anchor_bottom = 0.472
offset_left = 0.503998
offset_top = 0.199982
offset_right = 0.0719986
offset_bottom = 0.143982
pivot_offset = Vector2(9, 43.2437)
theme_override_styles/focus = SubResource("StyleBoxEmpty_wdt0o")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.717495
anchor_top = 0.217179
anchor_right = 0.586625
anchor_bottom = 1.15718
offset_left = -0.0119972
offset_top = -1.0
offset_right = -4.0
texture = ExtResource("5_g8uvi")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 460.397
offset_top = -74.1919
offset_right = 540.397
offset_bottom = 5.80811
texture = ExtResource("5_g8uvi")
expand_mode = 1

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.955
anchor_top = 0.576
anchor_right = 0.973
anchor_bottom = 0.687
offset_left = -0.160034
offset_top = -0.248016
offset_right = 0.104004
offset_bottom = -0.176025
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5tau")
flat = true

[node name="TextureRect" type="TextureRect" parent="Button2"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -1.19295
anchor_top = 0.347223
anchor_right = 0.336188
anchor_bottom = 0.92747
offset_left = 0.0519829
offset_top = -1.0
offset_right = -0.0599365
offset_bottom = -2.0
texture = ExtResource("4_6s0ht")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button2"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -613.0
offset_top = -301.0
offset_right = -533.0
offset_bottom = -220.0
texture = ExtResource("4_6s0ht")

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00267911
anchor_top = 0.833567
anchor_right = 0.038689
anchor_bottom = 0.929184
offset_left = 0.0863342
offset_top = -0.151611
offset_right = -0.569687
offset_bottom = -0.111572
theme_override_styles/focus = SubResource("StyleBoxEmpty_mg4ca")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Button3"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.89413
anchor_top = -1.10594
anchor_right = 2.57519
anchor_bottom = -0.580646
offset_left = -0.0240059
offset_top = -13.432
offset_right = -0.0339813
offset_bottom = -5.99997
texture = ExtResource("8_h5qa3")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button3"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 490.0
offset_top = -306.743
offset_right = 570.0
offset_bottom = -225.743
texture = ExtResource("8_h5qa3")

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.594
anchor_right = 0.306
anchor_bottom = 0.682
offset_left = 0.440002
offset_top = 0.0879822
offset_right = -0.512024
offset_bottom = 0.0639648
theme_override_styles/focus = SubResource("StyleBoxEmpty_q262x")
flat = true

[node name="TextureRect" type="TextureRect" parent="Button4"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.585083
offset_top = -0.085907
offset_right = 2.41492
offset_bottom = 10.9141
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_u22u8")

[node name="TextureRect2" type="TextureRect" parent="Button4"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 164.0
offset_top = -71.0
offset_right = 244.0
offset_bottom = 9.0
texture = ExtResource("10_u22u8")
expand_mode = 1

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.966626
anchor_top = 0.958595
anchor_right = 0.99707
anchor_bottom = 0.996891
offset_left = 0.573608
offset_top = 0.0485229
offset_right = 0.501587
offset_bottom = -1.76746
theme_override_styles/focus = SubResource("StyleBoxEmpty_x6dd3")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Button5"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -2.24124
anchor_top = -1.88772
anchor_right = -1.36022
anchor_bottom = -0.504714
offset_left = 30.3155
offset_top = -1.80074
offset_right = 31.4805
offset_bottom = -1.60974
rotation = 1.51947
texture = ExtResource("8_1ra4s")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button5"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -547.0
offset_top = -549.0
offset_right = -466.0
offset_bottom = -468.0
texture = ExtResource("8_1ra4s")

[node name="Button6" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.710104
anchor_top = 0.668123
anchor_right = 0.761931
anchor_bottom = 0.701679
offset_left = -0.0400391
offset_top = 0.0559998
offset_right = 0.25592
offset_bottom = 0.311951
theme_override_styles/focus = SubResource("StyleBoxEmpty_x6dd3")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Button6"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.249
anchor_top = 0.45
anchor_right = 1.021
anchor_bottom = 2.042
offset_left = 44.2879
offset_top = -2.36077
offset_right = 35.4169
offset_bottom = 6.94324
rotation = 1.51728
texture = ExtResource("9_74pkq")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button6"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -251.0
offset_top = -280.0
offset_right = -170.0
offset_bottom = -196.0
texture = ExtResource("9_74pkq")

[node name="Button7" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.909407
anchor_top = 0.017771
anchor_right = 0.995408
anchor_bottom = 0.131771
offset_left = 0.0319824
offset_top = -0.216034
offset_right = -0.0400391
offset_bottom = -0.0880127
theme_override_styles/focus = SubResource("StyleBoxEmpty_x6dd3")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Button7"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 2.968
anchor_top = -4.558
anchor_right = 3.693
anchor_bottom = -3.792
offset_left = -214.202
offset_top = 342.193
offset_right = -225.977
offset_bottom = 354.509
rotation = 1.52335
texture = ExtResource("10_6vm2p")

[node name="TextureRect2" type="TextureRect" parent="Button7"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -481.0
offset_top = 222.0
offset_right = -400.0
offset_bottom = 303.0
texture = ExtResource("10_6vm2p")

[node name="Button8" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.761
anchor_top = 0.742
anchor_right = 0.847
anchor_bottom = 0.856
offset_left = -849.672
offset_top = -441.816
offset_right = -915.744
offset_bottom = -483.688
theme_override_styles/focus = SubResource("StyleBoxEmpty_x6dd3")
flat = true

[node name="TextureRect" type="TextureRect" parent="Button8"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0105698
anchor_top = -0.0296837
anchor_right = 0.552688
anchor_bottom = 0.630436
offset_left = 0.0149956
offset_top = 0.00600433
offset_right = 0.03
offset_bottom = -1.0
texture = ExtResource("11_ntv08")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Button8"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 539.0
offset_top = 275.0
offset_right = 622.0
offset_bottom = 355.0
texture = ExtResource("11_ntv08")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_v2ta2")
volume_db = -7.914

[node name="Guitarra" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -174.0
offset_right = 148.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(143, 144)
texture = ExtResource("12_u45ga")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4b6kv")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1hvt")
}

[node name="rutaboton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 554.0
offset_right = 105.0
offset_bottom = 629.0

[node name="botonvolver3" type="AnimatedSprite2D" parent="rutaboton3"]
texture_filter = 1
position = Vector2(39, 40)
rotation = 3.14159
scale = Vector2(1.40933, 1.40933)
sprite_frames = SubResource("SpriteFrames_uub75")
autoplay = "default"
frame_progress = 0.868689
flip_v = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Cuatro" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 649.0
offset_top = 225.0
offset_right = 1073.0
offset_bottom = 376.0
texture = ExtResource("13_ayilc")
expand_mode = 1

[node name="instrucciones" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_kltit")
volume_db = -7.495
autoplay = true

[node name="audiocuatro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_iufnw")
volume_db = -7.495

[connection signal="pressed" from="rutaboton3" to="." method="_on_rutaboton_3_pressed"]
